--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "express-validator": "^6.6.1",
         "http-errors": "~1.6.3",
         "jsonwebtoken": "^8.5.1",
+        "moment": "^2.28.0",
         "morgan": "^1.10.0",
         "mysql": "^2.18.1",
         "nodemon": "^2.0.4",
